--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@angular/cli": "1.2.6",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
+    "@ngrx/core": "1.2.0",
+    "@ngrx/store": "2.2.2",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
